# teonite-task-django

./: .dockerignore  .gitignore  .guidelines  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
src/core/: env.py  settings.py  urls.py
src/scraper/: items.py  pipelines.py  settings.py
src/scraper/spiders/: blog_spider.py
src/stats/: models.py  tests.py  urls.py  views.py
src/stats/management/commands/: scrape.py
src/stats/migrations/: 0001_initial.py  0002_remove_article_author_article_authors.py
