[project]
name = "teonite-task-django"
version = "0.1.0"
description = ""
authors = [
    {name = "bgozlinski",email = "bartlomiej.gozlinski@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "scrapy (>=2.14.2,<3.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "django-environ (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
